--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.0.12
   hive: ^2.0.4
   hive_flutter: ^1.1.0
+  crypt: ^4.3.1
 
 dev_dependencies:
   flutter_test:
